# siemens-td3511-vzlogger

./: tasmota-notes.txt
electric-meter-siemens-td3511/: stop-meter.sh  tasmota-script.txt  vzlogger.conf
hitchi/: README.md  hitchi.py  pyproject.toml
